--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -1,18 +1,10 @@
-* { 
-    margin: 0; 
-    padding: 0; 
-    box-sizing: border-box; }
-body { 
-    font: 13px Helvetica, Arial; }
-.ideaBox {
-    width: 10%;
-    padding: 5px 20px;
-    margin: 8px 0;
-    box-sizing: border-box;
+.input-lg{
+height: 160px;
+   font-size: 16px;
+   line-height: 12px;
 }
-.descriptionBox {
-    width: 50%;
-    padding: 5px 20px;
-    margin: 8px 0;
-    box-sizing: border-box;
+.input-sm{
+height: 40px;
+   font-size: 16px;
+   line-height: 12px;
 }
