--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,25 +1,35 @@
 <!doctype html>
   <html>
-   <head>
-    <title>IdeaBoard App</title>
-    <link rel='stylesheet' href='/styles/style.css' type='text/css'/>
-    <script src="http://code.jquery.com/jquery-1.11.1.js"></script>
-  </head>
+    <head>
+        <title>IdeaBoard App</title>
+        <script src="http://code.jquery.com/jquery-1.11.1.js"></script>
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap-theme.min.css">
+        <link rel='stylesheet' href='/styles/style.css' type='text/css'/>
+    </head>
   <body> 
     <h1>Idea Board Site</h1>
     <p>Basic site to post project ideas.</p>
-    <ul class="ideas">
+    <ul class="list-group-item">
     <% for(var i=0; i<ideas.length; i++) {%>
-        <li class="ideas">
+        <li class="list-group-item">
             <span><%= ideas[i].idea %></span>
             <span><%= ideas[i].description %></span>
         </li>
     <% } %>
     </ul>
     <form action="/idea" method="POST">
-      <input type="text" placeholder="Idea" name="idea" class="ideaBox">
-      <input type="text" placeholder="Description" name="description" class="descriptionBox">
-    <button type="submit">Submit</button>
-  </form>
+        <div class="col-lg-3 col-lg-offset-4">
+            <input type="text" placeholder="Idea" name="idea" class="form-control input-sm">
+        </div>
+        <div class="col-xs-3 col-lg-offset-4">
+            <br />
+            <input type="text" placeholder="Description" name="description" class="form-control input-lg">
+        </div>
+        <div class="col-xs-3 col-lg-offset-5">
+            <br />
+            <button type="submit" class="btn btn-default">Submit</button>
+        </div>  
+    </form>
   </body>
 </html>
