altered db schema

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -20,11 +20,11 @@
     </ul>
     <form action="/idea" method="POST">
         <div class="col-lg-3 col-lg-offset-4">
-            <input type="text" placeholder="Idea" name="idea" class="form-control input-sm">
+            <input type="text" placeholder="Idea" name="title" class="form-control input-sm">
         </div>
         <div class="col-xs-3 col-lg-offset-4">
             <br />
-            <input type="text" placeholder="Description" name="description" class="form-control input-lg">
+            <input type="text" placeholder="Description" name="text" class="form-control input-lg">
         </div>
         <div class="col-xs-3 col-lg-offset-5">
             <br />
